Complete Iteration 2: Recipe Page for Odin Recipes project
Added a new HTML document for the Simple Macaroni and Cheese recipe and linked it in the index.html document. Iteration 2 of the Odin Recipes project under 'The Odin Project' repository is now finished, featuring an additional recipe for users to explore.

--- a/Foundations/Odin Recipes/Recipes/Simple Macaroni and Cheese.html
+++ b/Foundations/Odin Recipes/Recipes/Simple Macaroni and Cheese.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="Recipes/Simple Macaroni and Cheese.html">Simple Macaroni and Cheese</a>
+    <h1>Simple Macaroni and Cheese</h1>
 </body>
 </html>
