Complete Iteration 4: Add More Recipes for Odin Recipes project
Added the Honey Glazed Chicken and Easy Korean Beef Bowl recipes, completing Iteration 4 of the Odin Recipes project. With these new additions, the project is now finished and offers a diverse selection of delicious recipes for users to explore and enjoy.

--- a/Foundations/Odin Recipes/index.html
+++ b/Foundations/Odin Recipes/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="Recipes/Simple Macaroni and Cheese.html">Simple Macaroni and Cheese</a>
+    <ul>
+        <li><a href="Recipes/Simple Macaroni and Cheese.html">Simple Macaroni and Cheese</a></li>
+        <li><a href="Recipes/Honey Glazed Chicken.html">Honey Glazed Chicken</a></li>
+        <li><a href="Recipes/Easy Korean Beef Bowl.html">Easy Korean Beef Bowl</a></li>
+    </ul>
 </body>
 </html>
