--- a/Foundations/Odin Recipes/Recipes/Simple Macaroni and Cheese.html
+++ b/Foundations/Odin Recipes/Recipes/Simple Macaroni and Cheese.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Simple Macaroni and Cheese</h1>
-    <img src="simple_macaroni_and_cheese.webp" alt="Macaroni and cheese">
+    <img src="simple_macaroni_and_cheese.webp" alt="Close up view of Simple Macaroni and Cheese dish.">
     <h2>Description</h2>
     <p>Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and cheese often costs forty or fifty dollars to prepare when you have so many expensive cheeses, but they aren't always the best tasting. This simple recipe is cheap and tasty.</p>
     <h2>Ingredients</h2>
