Add home page links for recipes in Odin Recipes project
Included links to the home page for each recipe as part of the Odin Recipes project. Users can now navigate directly to the home page at the end of each recipe.

--- a/Foundations/Odin Recipes/Recipes/Simple Macaroni and Cheese.html
+++ b/Foundations/Odin Recipes/Recipes/Simple Macaroni and Cheese.html
@@ -30,5 +30,7 @@
         <li>Drain macaroni and fold into cheese sauce until coated.</li>
         <li>Serve hot and enjoy!</li>
     </ol>
+    <br>
+    <a href="../index.html" alt="Link to home page.">Home</a>
 </body>
 </html>
