--- a/Foundations/Odin Recipes/Recipes/Honey Glazed Chicken.html
+++ b/Foundations/Odin Recipes/Recipes/Honey Glazed Chicken.html
@@ -26,5 +26,7 @@
         <li>Pour honey mixture into the skillet; continue to cook and stir until chicken is no longer pink in the center and sauce is thickened, about 5 minutes more.</li>
         <li>Serve hot and enjoy!</li>
     </ol>
+    <br>
+    <a href="../index.html" alt="Link to home page.">Home</a>
 </body>
 </html>
