Add styling to home page of Odin Recipes project
Implemented CSS styling to enhance the visual appearance of the home page for the Odin Recipes project. The added styles improve the layout and aesthetics, providing a more polished and user-friendly browsing experience.

--- a/Foundations/Odin Recipes/index.html
+++ b/Foundations/Odin Recipes/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"></style>
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="Recipes/Simple Macaroni and Cheese.html">Simple Macaroni and Cheese</a></li>
-        <li><a href="Recipes/Honey Glazed Chicken.html">Honey Glazed Chicken</a></li>
-        <li><a href="Recipes/Easy Korean Beef Bowl.html">Easy Korean Beef Bowl</a></li>
-    </ul>
+    <div class="container">
+        <div class="recipes-list">
+            <p><a href="Recipes/Simple Macaroni and Cheese.html">Simple Macaroni and Cheese</a></p>
+            <p><a href="Recipes/Honey Glazed Chicken.html">Honey Glazed Chicken</a></p>
+            <p><a href="Recipes/Easy Korean Beef Bowl.html">Easy Korean Beef Bowl</a></p>
+        </div>
+    </div>
 </body>
 </html>
