Update home page layout for Odin Recipes project
Modified the HTML and CSS for the home page of the Odin Recipes project to display recipe titles under images in a horizontal layout. Each recipe is now presented with an image and title, providing a more visually appealing and user-friendly browsing experience.

--- a/Foundations/Odin Recipes/index.html
+++ b/Foundations/Odin Recipes/index.html
@@ -10,9 +10,18 @@
     <h1>Odin Recipes</h1>
     <div class="container">
         <div class="recipes-list">
-            <p><a href="Recipes/Simple Macaroni and Cheese.html">Simple Macaroni and Cheese</a></p>
-            <p><a href="Recipes/Honey Glazed Chicken.html">Honey Glazed Chicken</a></p>
-            <p><a href="Recipes/Easy Korean Beef Bowl.html">Easy Korean Beef Bowl</a></p>
+            <div class="recipe">
+                <a href="Recipes/Simple Macaroni and Cheese.html"><img src="Recipes/simple_macaroni_and_cheese.webp" alt="Simple Macaroni and Cheese"></a>
+                <p>Simple Macaroni and Cheese</p>
+            </div>
+            <div class="recipe">
+                <a href="Recipes/Honey Glazed Chicken.html"><img src="Recipes/honey_glazed_chicken.webp" alt="Honey Glazed Chicken"></a>
+                <p>Honey Glazed Chicken</p>
+            </div>
+            <div class="recipe">  
+                <a href="Recipes/Easy Korean Beef Bowl.html"><img src="Recipes/easy_korean_beef_bowl.webp" alt="Easy Korean Beef Bowl"></a>
+                <p>Easy Korean Beef Bowl</p>
+            </div>
         </div>
     </div>
 </body>
