Update headers for Odin Recipes project
Changed the header to 'Odin Recipes' for every page and updated the 'Description' heading on recipe pages to reflect the name of the relevant dish in the Odin Recipes project. These changes provide consistency across pages and improve the clarity of recipe descriptions.

--- a/Foundations/Odin Recipes/Recipes/Honey Glazed Chicken.html
+++ b/Foundations/Odin Recipes/Recipes/Honey Glazed Chicken.html
@@ -11,13 +11,15 @@
     <title>Honey Glazed Chicken</title>
 </head>
 <body>
-    <h1>Honey Glazed Chicken</h1>
-    <div class="links">
-        <a href="../index.html" alt="Link to home page.">Home</a>
-    </div>
+    <header>
+        <h1>Odin Recipes</h1>
+        <div class="links">
+            <a href="../index.html" alt="Link to home page.">Home</a>
+        </div>
+    </header>
     <div class="container-recipes">
         <img src="honey_glazed_chicken.webp" alt="Close up view of Honey Glazed Chicken dish.">
-        <h2>Description</h2>
+        <h2>Honey Glazed Chicken</h2>
         <p>Savor the delightful flavors of our Honey Glazed Chicken—a perfect blend of sweet and savory. This tender dish is a crowd-pleaser, paired perfectly with steamed rice for a satisfying meal.</p>
         <h2>Ingredients</h2>
         <ul>
