--- a/Foundations/Odin Recipes/Recipes/Simple Macaroni and Cheese.html
+++ b/Foundations/Odin Recipes/Recipes/Simple Macaroni and Cheese.html
@@ -11,13 +11,15 @@
     <title>Simple Macaroni and Cheese</title>
 </head>
 <body>
-    <h1>Simple Macaroni and Cheese</h1>
-    <div class="links">
-        <a href="../index.html" alt="Link to home page.">Home</a>
-    </div>
+    <header>
+        <h1>Odin Recipes</h1>
+        <div class="links">
+            <a href="../index.html" alt="Link to home page.">Home</a>
+        </div>
+    </header>
     <div class="container-recipes">
         <img src="simple_macaroni_and_cheese.webp" alt="Close up view of Simple Macaroni and Cheese dish.">
-        <h2>Description</h2>
+        <h2>Simple Macaroni and Cheese</h2>
         <p>Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and cheese often costs forty or fifty dollars to prepare when you have so many expensive cheeses, but they aren't always the best tasting. This simple recipe is cheap and tasty.</p>
         <h2>Ingredients</h2>
         <ul>
