--- a/Foundations/Odin Recipes/Recipes/Easy Korean Beef Bowl.html
+++ b/Foundations/Odin Recipes/Recipes/Easy Korean Beef Bowl.html
@@ -11,13 +11,15 @@
     <title>Easy Korean Beef Bowl</title>
 </head>
 <body>
-    <h1>Easy Korean Beef Bowl</h1>
-    <div class="links">
-        <a href="../index.html" alt="Link to home page.">Home</a>
-    </div>
+    <header>
+        <h1>Odin Recipes</h1>
+        <div class="links">
+            <a href="../index.html" alt="Link to home page.">Home</a>
+        </div>
+    </header>
     <div class="container-recipes">
         <img src="easy_korean_beef_bowl.webp" alt="Close up view of Easy Korean Beef Bowl dish.">
-        <h2>Description</h2>
+        <h2>Easy Korean Beef Bowl</h2>
         <p>This delicious Korean beef bowl is quick and easy to make with ground beef. It's seasoned with fresh ginger, garlic, soy, sesame seeds, and crushed red pepper, but these ingredients can easily be adjusted to suit your taste. Serve over warm rice or spiralized vegetables.</p>
         <h2>Ingredients</h2>
         <ul>
