--- a/Foundations/Odin Recipes/index.html
+++ b/Foundations/Odin Recipes/index.html
@@ -11,7 +11,9 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <header>
+        <h1>Odin Recipes</h1>
+    </header>
     <div class="container">
         <div class="recipe">
             <a href="Recipes/Simple Macaroni and Cheese.html"><img src="Recipes/simple_macaroni_and_cheese.webp" alt="Simple Macaroni and Cheese"></a>
