Update logo with new design and add homepage link for Odin Recipes project
Implemented a new design for the logo in the Odin Recipes project. The updated logo now links back to the homepage for improved navigation. This change enhances the visual identity of the project and improves user experience by providing a convenient way to return to the homepage from any page.

--- a/Foundations/Odin Recipes/index.html
+++ b/Foundations/Odin Recipes/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Odin Recipes</h1>
+        <a href="index.html"><img src="Odin Recipes logo.png" alt="Odin Recipes logo"></a>
     </header>
     <div class="container">
         <div class="recipe">
