--- a/Foundations/Odin Recipes/Recipes/Honey Glazed Chicken.html
+++ b/Foundations/Odin Recipes/Recipes/Honey Glazed Chicken.html
@@ -12,10 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Odin Recipes</h1>
-        <div class="links">
-            <a href="../index.html" alt="Link to home page.">Home</a>
-        </div>
+        <a href="../index.html"><img src="../Odin Recipes logo.png" alt="Odin Recipes logo"></a>
     </header>
     <div class="container-recipes">
         <img src="honey_glazed_chicken.webp" alt="Close up view of Honey Glazed Chicken dish.">
