--- a/Foundations/Landing Page/index.html
+++ b/Foundations/Landing Page/index.html
@@ -6,15 +6,14 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap">
     <title>Landing Page</title>
 </head>
 <body>
     <header>
         <div class="container">
-            <div class="logo">
-                <img src="Learn Bitcoin logo.png" alt="Learn Bitcoin logo">
-            </div>
+            <div class="header-logo">Header Logo</div>
             <nav>
                 <ul class="links">
                     <li><a href="#">header link one</a></li>
